--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@okta/okta-signin-widget": "^5.16.0",
     "@okta/okta-vue": "^5.0.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
