--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "jest": "^24.9.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
