--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_FRONTEND_BASE_URL = https://webappforaliens-frontend.herokuapp.com/
+VUE_APP_FRONTEND_BASE_URL = https://webappforaliens-frontend.herokuapp.com
 VUE_APP_BACKEND_BASE_URL = https://webappforaliens.herokuapp.com
